--- a/wp-content/themes/think/src/scss/layout/_grid.scss
+++ b/wp-content/themes/think/src/scss/layout/_grid.scss
@@ -1,10 +1,13 @@
 /* Grid */
 
 .main {
-    padding: 4em 0 0;
+    padding: 4em 0 7.5em;
     overflow: hidden;
     .no-js & {
         opacity: 1 !important;
+    }
+    .home &{
+        padding-bottom: 0;
     }
 }
 
